# plotty

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-cd.yml
migrations/: 00002_regioncords.sql
minecraft-uuid/: Cargo.toml  README.md
minecraft-uuid-cli/: Cargo.toml
minecraft-uuid-cli/src/: main.rs
minecraft-uuid/src/: endpoints.rs  error.rs  lib.rs  models.rs
plotty/: Cargo.toml
plotty/migrations/: 00001_init.sql  00003_plotids.sql
plotty/src/: helpers.rs  idcache.rs  main.rs  models.rs
plotty/src/commands/: bind.rs  mod.rs  region.rs
plotty/src/db/: mod.rs
plotty/src/models/: mod.rs  region.rs  user.rs
src/: conf.rs  helpers.rs  main.rs  mc.rs  models.rs
src/commands/: bind.rs  region.rs
src/db/: mod.rs
