[package]
name = "plotty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
config = "0.13.2"
env_logger = "0.9.3"
log = "0.4.17"
minecraft-client-rs = "0.1.3"
sqlx = { version = "0.6", features = [ "mysql", "runtime-actix-rustls" ] }
serde = { version = "1.0.147", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
xid = "1.0.3"